# Reclaim

./: .gitignore  .npmrc  .updater-key.pub  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  install.ps1  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tweak_request.yml
.github/workflows/: check.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  PHASES_QUICK_INDEX.md  PLAN.md  ROADMAP.md
scripts/: _catalog-entry.mjs  export-catalog.mjs  gen-unattend-config.mjs  setup-test-vm.ps1  test-install-media.ps1  test-tweaks-in-vm.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: apps.json  bloatware.json  profiles.json  tweaks.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  anticheat.rs  app_info.rs  cli.rs  context_menu.rs  defaults.rs  defender.rs  dev_features.rs  driver_packages.rs  driver_search.rs  driver_update.rs  files.rs  firewall.rs  gaming_session.rs  icons.rs  iso_builder.rs  latency.rs  lib.rs  main.rs  maintenance.rs  msi.rs  network.rs  nic.rs  onedrive.rs  persistence.rs  personalization.rs  recall.rs  recovery.rs  schtasks.rs  service.rs  sysinfo.rs  sysquery.rs  tweaks.rs  unattend.rs  usb_flash.rs  winget.rs  winupdate.rs
src/lib/: admin.svelte.ts  cache.svelte.ts  log.svelte.ts  notify.ts  prefs.svelte.ts  route-cache.svelte.ts  scroll-restore.svelte.ts  (+4 more)
(+138 files in other folders)
