[package]
name = "reclaim"
version = "0.18.2"
description = "Reclaim Your Windows — Win11 debloat & privacy tool"
authors = ["Jonas Laux"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "reclaim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Bake portable-mode into the binary. Enabled for the ZIP build only —
# the installer build leaves this off so it falls back to %APPDATA%/Reclaim.
portable = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
regex = "1"
dirs = "5"
tokio = { version = "1", features = ["fs", "io-util"] }
portable-pty = "0.8"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
